--- a/pom.xml
+++ b/pom.xml
@@ -44,14 +44,12 @@
         </plugins>
     </build>
 
-    <!--
     <repositories>
         <repository>
             <id>${NEXUS_GROUP}</id>
-
+            <!--suppress UnresolvedMavenProperty -->
             <url>http://${NEXUS_HOST}:${NEXUS_PORT}/repository/${NEXUS_GROUP}/</url>
         </repository>
     </repositories>
-    -->
 
 </project>
